<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FAFAFA"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="15dp"
            android:scaleType="center"
            android:src="@drawable/v_btn_close" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="100dp"
            android:scaleType="center"
            android:src="@drawable/v_iv_login_icon"
            android:visibility="gone" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="105dp"
            android:background="#D2D2D2" />

        <EditText
            android:id="@+id/et_username"
            style="@style/ET_login"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#ffffff"
            android:hint="@string/v_hint_login_username"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:paddingLeft="28dp"
            android:paddingRight="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="28dp"
            android:background="#E0E0E0" />

        <EditText
            android:id="@+id/et_pwd"
            style="@style/ET_login"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#ffffff"
            android:hint="@string/v_hint_login_pwd"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="28dp"
            android:paddingRight="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="28dp"
            android:background="#E0E0E0" />

        <EditText
            android:id="@+id/et_pwd_confirm"
            style="@style/ET_login"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:background="#ffffff"
            android:hint="@string/v_hint_login_pwd_confirm"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:paddingLeft="28dp"
            android:paddingRight="10dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#D2D2D2" />

        <Button
            android:id="@+id/btn_regist"
            style="@style/Btn_green_45"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/v_regist" />
    </LinearLayout>
</ScrollView>