<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FAFAFA"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginEnd="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="15dp"
                android:scaleType="center"
                android:src="@drawable/v_btn_close" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:scaleType="center"
                android:src="@drawable/v_iv_login_icon" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginTop="25dp"
                android:background="#D2D2D2" />

            <EditText
                android:id="@+id/et_username"
                style="@style/ET_login"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#ffffff"
                android:hint="@string/v_hint_login_username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingLeft="28dp"
                android:paddingRight="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="28dp"
                android:background="#E0E0E0" />

            <EditText
                android:id="@+id/et_pwd"
                style="@style/ET_login"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="#ffffff"
                android:hint="@string/v_hint_login_pwd"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingLeft="28dp"
                android:paddingRight="10dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#D2D2D2" />

            <Button
                android:id="@+id/btn_login"
                style="@style/Btn_green_45"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/v_login" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/iv_wechat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="center"
                        android:src="@drawable/z_wechat" />

                    <ImageView
                        android:id="@+id/iv_qq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:scaleType="center"
                        android:src="@drawable/z_qq" />

                    <ImageView
                        android:id="@+id/iv_sina"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="30dp"
                        android:scaleType="center"
                        android:src="@drawable/z_sina" />

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="17dp"
                android:layout_marginTop="60dp"
                android:orientation="horizontal">

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="5"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_regist"
                    style="@style/TV_go_regist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:gravity="center"
                    android:text="@string/v_login_go_regist" />

                <TextView
                    android:id="@+id/tv_forgetpwd"
                    style="@style/TV_go_regist"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/v_login_go_forget"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>