<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#252525"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_user"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="35dp"
                android:background="?attr/img_shape_circle_user"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/z_iv_default_user" />

            <TextView
                android:id="@+id/tv_username"
                style="@style/TV_left_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="3dp"
                android:text="@string/v_left_menu_login" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingStart="30dp">

                <!--<TextView-->
                    <!--android:id="@+id/tv_home"-->
                    <!--style="@style/TV_left_menu"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:drawableLeft="@drawable/v_left_menu_home"-->
                    <!--android:drawableStart="@drawable/v_left_menu_home"-->
                    <!--android:text="@string/v_left_menu_home" />-->

                <!--<View-->
                    <!--android:id="@+id/v_line_1"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="1dp"-->
                    <!--android:layout_marginEnd="30dp"-->
                    <!--android:layout_marginLeft="30dp"-->
                    <!--android:layout_marginRight="30dp"-->
                    <!--android:layout_marginStart="30dp"-->
                    <!--android:background="#2B2B2B" />-->

                <TextView
                    android:id="@+id/tv_collect"
                    style="@style/TV_left_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/v_left_menu_collect"
                    android:drawableStart="@drawable/v_left_menu_collect"
                    android:text="@string/v_left_menu_collect" />

                <View
                    android:id="@+id/v_line_2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginStart="30dp"
                    android:background="#2B2B2B" />

                <TextView
                    android:id="@+id/tv_commit"
                    style="@style/TV_left_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/v_left_menu_commit"
                    android:drawableStart="@drawable/v_left_menu_commit"
                    android:text="@string/v_left_menu_commit" />

                <View
                    android:id="@+id/v_line_3"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginStart="30dp"
                    android:background="#2B2B2B" />

                <TextView
                    android:id="@+id/tv_history_read"
                    style="@style/TV_left_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/v_left_menu_history_read"
                    android:drawableStart="@drawable/v_left_menu_history_read"
                    android:text="@string/v_left_menu_history_read" />

                <View
                    android:id="@+id/v_line_4"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginEnd="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginStart="30dp"
                    android:background="#2B2B2B" />

                <TextView
                    android:id="@+id/tv_setting"
                    style="@style/TV_left_menu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/v_left_menu_setting"
                    android:drawableStart="@drawable/v_left_menu_setting"
                    android:text="@string/v_left_menu_setting" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/v_line_bottom"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:background="#2B2B2B" />

    <TextView
        android:id="@+id/tv_logout"
        style="@style/TV_left_logout"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:drawableLeft="@drawable/v_left_menu_exit"
        android:drawableStart="@drawable/v_left_menu_exit"
        android:layout_gravity="bottom"
        android:gravity="center"
        android:text="@string/z_btn_logout" />

</LinearLayout>